<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".users.activities.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screen_viewpager"
        android:layout_width="408dp"
        android:layout_height="574dp"
        app:layout_constraintBottom_toTopOf="@+id/tab_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

    </androidx.viewpager.widget.ViewPager>

    <Button


        android:id="@+id/btn_next"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_simple_style"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:drawableTint="@color/gradient_start_color"
        android:paddingLeft="20dp"
        android:text="@string/btn_next"
        android:textColor="@color/gradient_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button

        android:id="@+id/btn_skip"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/btn_simple_style"
        android:drawableTint="@color/gradient_start_color"
        android:text="@string/btn_skip"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/screen_viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_indicator"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/indicator_selector">

    </com.google.android.material.tabs.TabLayout>

    <Button

        android:id="@+id/btn_get_started"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_blue_corner"
        android:text="@string/btn_get_started"
        android:textColor="#fff"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>